@@ -1,3 +1,8 @@
+2008-07-24  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc-dir.el (vc-dir-search): New function.
+	(vc-dir-mode-map, vc-dir-menu-map): Bind it.
+
 2008-07-23  Juri Linkov  <juri@jurta.org>
 
 	* isearch-multi.el: Remove file to avoid dos file name clashes
